<resources>
    <string name="app_name">Paint</string>
    <string name="_100">100</string>
    <string name="_56">56</string>
    <string name="_57">57</string>
    <string name="ff393838">FF393838</string>
    <string name="hex">Hex</string>
    <string name="a">A%</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="new_file">Tạo mới</string>
    <string name="open_file">Mở</string>
    <string name="save_file">Lưu</string>
    <string name="setting">Cài đặt</string>
    <string name="ok">Ok</string>
    <string name="cancel">Huỷ</string>
    <string name="new_folder">Thư mục mới</string>
    <string name="input_name_folder">Nhập tên thư mục</string>
    <string name="create_folder">Tạo thư mục</string>
    <string name="list_file">Danh sách các file</string>
    <string name="name_file">Name file</string>
    <string name="brush_size">Kích thước cọ</string>
    <string name="_0">0</string>
    <string name="youtuber">Ủng hộ cho kênh mình với nha.</string>
</resources>