<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/linear_layout_color"
    android:layout_gravity="end"
    android:background="#393838"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <com.jaredrummler.android.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        app:cpv_alphaChannelVisible="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_alpha"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_red"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_green"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_blue"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_text_hex"
                android:gravity="center_horizontal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_background"
                android:padding="5dp"
                android:text="@string/ff393838"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_md_red500"
                android:background="@color/md_red_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_pink500"
                android:background="@color/md_pink_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_purple500"
                android:background="@color/md_purple_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_deep_purple500"
                android:background="@color/md_deep_purple_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_indigo500"
                android:background="@color/md_indigo_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_blue500"
                android:background="@color/md_blue_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_light_blue500"
                android:background="@color/md_light_blue_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_cyan500"
                android:background="@color/md_cyan_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_md_teal500"
                android:background="@color/md_teal_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_green500"
                android:background="@color/md_green_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_light_green500"
                android:background="@color/md_light_green_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_lime500"
                android:background="@color/md_lime_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_yellow500"
                android:background="@color/md_yellow_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_amber500"
                android:background="@color/md_amber_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_md_orange500"
                android:background="@color/md_orange_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/button_brown500"
                android:background="@color/md_brown_500"
                android:layout_margin="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>